--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [tool.poetry]
 name = "pydantic-db"
-version = "0.2.0"
+version = "0.3.0"
 description = ""
 authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 pydantic = "^1.9.0"
+case-switcher = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
