--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pydantic-db"
-version = "0.5.0"
+version = "0.6.0"
 description = ""
 authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
 
@@ -8,7 +8,7 @@ authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
 python = "^3.10"
 pydantic = "^1.9.0"
 case-switcher = "^1.3.0"
-SQLAlchemy = "^1.4.35"
+tortoise-orm = "^0.19.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
