--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pydantic-db"
-version = "0.7.0"
+version = "0.8.0"
 description = ""
 authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
 
@@ -8,12 +8,13 @@ authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
 python = "^3.10"
 pydantic = "^1.9.0"
 case-switcher = "^1.3.0"
-SQLAlchemy = "^1.4.35"
+SQLAlchemy = {extras = ["asyncio"], version = "^1.4.35"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
 mypy = "^0.942"
 coverage = "^6.3.2"
+sqlalchemy-stubs = "^0.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
