--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pydantic-db"
-version = "0.8.0"
+version = "0.9.0"
 description = ""
 authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
 
@@ -15,6 +15,7 @@ pytest = "^7.1.1"
 mypy = "^0.942"
 coverage = "^6.3.2"
 sqlalchemy-stubs = "^0.4"
+aiosqlite = "^0.17.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
