--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pydantic-db"
-version = "0.13.1"
+version = "0.13.2"
 description = ""
 authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
 
@@ -9,6 +9,7 @@ python = "^3.10"
 pydantic = "^1.9.0"
 case-switcher = "^1.3.0"
 SQLAlchemy = {extras = ["asyncio"], version = "^1.4.35"}
+PyPika = "^0.48.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
