--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,9 @@
 [tool.poetry]
 name = "pydantic-db"
-version = "0.19.1"
-description = ""
+version = "0.19.2"
+description = "An asynchronous ORM that uses pydantic models."
+repository = "https://gitlab.com/mburkard/pydantic-db"
+homepage = "https://gitlab.com/mburkard/pydantic-db"
 authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
 
 [tool.poetry.dependencies]
