--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pydantic-db"
-version = "0.26.9"
+version = "0.26.10"
 description = "An asynchronous ORM that uses pydantic models."
 repository = "https://gitlab.com/mburkard/pydantic-db"
 homepage = "https://gitlab.com/mburkard/pydantic-db"
@@ -19,6 +19,7 @@ Cython = "^0.29.32"
 mypy = "^0.971"
 coverage = "^6.4.4"
 aiosqlite = "^0.17.0"
+pytest = "^7.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
